examples/n8n/patch-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey-n8n
spec:
  template:
    spec:
      volumes:
        - name: valkey-config
          configMap:
            name: valkey-config
      containers:
        - name: valkey
          image: valkey/valkey:8.1.3
          command: ["valkey-server"]
          args: ["/etc/valkey/valkey.conf"]
          volumeMounts:
            - name: valkey-config
              mountPath: /etc/valkey/
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "8Gi"
