examples/n8n/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  template:
    spec:
      containers:
        - name: webserver
